syntax = "proto3";

package vehicle;

option go_package = "proto/vehiclepb";

enum Type {
  UNKNOWN = 0;
  UPDATE_RATE = 1; // change telemetry interval
  PING = 2;        // health check
  SHUTDOWN = 3;    // stop simulator
}

message Command {
    Type type = 1;
    uint32 value = 2;
}

// Telemetry sent from vehicle to server
message Telemetry {
  uint32 vehicle_id = 1;
  int64 timestamp_ms = 2;

  double lat = 3;
  double lon = 4;

  float speed_kmh = 5;
  uint32 battery_percent = 6;
  float engine_temp_c = 7;
}

// Streaming service for telemetry + commands
service VehicleTelemetryService {
  rpc StreamTelemetry(stream Telemetry) returns (stream Command);
}
